--- a/index.html
+++ b/index.html
@@ -50,9 +50,25 @@
     </div>
 
     <!-- Main content -->
-    <section class="hero">
-        <div class="container"></div>
-    </section>
+    <div class="main">
+        <section class="hero">
+            <div class="overlay">
+                <div class="container">
+                    <div class="hero-content">
+                        <h3 class="hero-welcome-text">"Hello! Sharing world"</h3>
+                        <h1>CREATIVE COMMONS <br> GLOBAL SUMMIT<br> 2015</h1>
+                        <p class='hero-p'>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Donec euismod, nisl eget consectetur sagittis, nisl
+                            nisi consectetur nisl, euismod nisl nisi euismod nisl.
+                        </p>
+                        <h2 class="hero-time">2015.10.15(THU) ~ 16(FRI)</h2>
+                        <span class='hero-venue'>@National Museum of Korea, Art Center Nabi and more</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     
 <script defer src="main.js"></script>
 </body>
