--- a/index.html
+++ b/index.html
@@ -51,21 +51,96 @@
 
     <!-- Main content -->
     <div class="main">
+        <!-- hero section -->
         <section class="hero">
             <div class="overlay">
                 <div class="container">
                     <div class="hero-content">
                         <h3 class="hero-welcome-text">"Hello! Sharing world"</h3>
                         <h1>CREATIVE COMMONS <br> GLOBAL SUMMIT<br> 2015</h1>
-                        <p class='hero-p'>
+                        <p class="hero-p">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Donec euismod, nisl eget consectetur sagittis, nisl
                             nisi consectetur nisl, euismod nisl nisi euismod nisl.
                         </p>
                         <h2 class="hero-time">2015.10.15(THU) ~ 16(FRI)</h2>
-                        <span class='hero-venue'>@National Museum of Korea, Art Center Nabi and more</span>
+                        <span class="hero-venue">@National Museum of Korea, Art Center Nabi and more</span>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- program section -->
+        <section class="program">
+            <div class="container">
+                <div class="program-content">
+                    <h2 class="program-title">Main Program</h2>
+                    <div class="program-list">
+                        <div class="program-item">
+                            <div class="program-item-img">
+                                <img src="img/program-1.png" alt="">
+                            </div>
+                            <div class="program-item-text">
+                                <h3>Lecture</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="program-item-img">
+                                <img src="img/program-2.png" alt="">
+                            </div>
+                            <div class="program-item-text">
+                                <h3>CC Exhibition</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="program-item-img">
+                                <img src="img/program-3.png" alt="">
+                            </div>
+                            <div class="program-item-text">
+                                <h3>Forum</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="program-item-img">
+                                <img src="img/program-4.png" alt="">
+                            </div>
+                            <div class="program-item-text">
+                                <h3>Workshop</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="program-item">
+                            <div class="program-item-img">
+                                <img src="img/program-5.png" alt="">
+                            </div>
+                            <div class="program-item-text">
+                                <h3>CC Ignite</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="program-cta">
+                        <a href="#" class="program-btn">Join CC Global Summit 2015</a>
+                    </div>
+                </div> 
             </div>
         </section>
     </div>
