--- a/index.html
+++ b/index.html
@@ -143,6 +143,85 @@
                 </div> 
             </div>
         </section>
+
+        <!-- Feature section -->
+        <section class="feature">
+            <div class="container">
+                <div class="feature-content">
+                    <h2 class="feature-title">Feature</h2>
+                    <div class="feature-list">
+                        <div class="feature-item">
+                            <div class="feature-item-img">
+                                <img src="img/profile-1.jpg" alt="">
+                            </div>
+                            <div class="feature-item-text">
+                                <h3>Baraka Danny</h3>
+                                <span class="role">Director of Art center Nabi </span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-item-img">
+                                <img src="img/profile-2.jpg" alt="">
+                            </div>
+                            <div class="feature-item-text">
+                                <h3>Jean Marc</h3>
+                                <span class="role">Director of Art center Nabi </span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-item-img">
+                                <img src="img/profile-3.jpg" alt="">
+                            </div>
+                            <div class="feature-item-text">
+                                <h3>Sammy Kulondwa</h3>
+                                <span class="role">Director of Art center Nabi</span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-item-img">
+                                <img src="img/profile-4.jpg" alt="">
+                            </div>
+                            <div class="feature-item-text">
+                                <h3>Rebecca C.</h3>
+                                <span class="role">Director of Art center Nabi</span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-item-img">
+                                <img src="img/profile-5.jpg" alt="">
+                            </div>
+                            <div class="feature-item-text">
+                                <h3>Kevin Jean</h3>
+                                <span class="role">Director of Art center Nabi </span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="more-feature">
+                            <a href="#" class="more-btn">More <i class="fa-solid fa-chevron-down"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     
 <script defer src="main.js"></script>
