--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="program">
             <div class="container">
                 <div class="program-content">
-                    <h2 class="program-title">Main Program</h2>
+                    <h2 class="section-title">Main Program</h2>
                     <div class="program-list">
                         <div class="program-item">
                             <div class="program-item-img">
@@ -148,7 +148,7 @@
         <section class="feature">
             <div class="container">
                 <div class="feature-content">
-                    <h2 class="feature-title">Feature</h2>
+                    <h2 class="section-title">Feature</h2>
                     <div class="feature-list">
                         <div class="feature-item">
                             <div class="feature-item-img">
@@ -222,7 +222,51 @@
                 </div>
             </div>
         </section>
+
+        <!-- Partner section -->
+        <section class="partner">
+            <div class="container">
+                <div class="partner-content">
+                    <h2 class="section-title partner-title">Partner</h2>
+                    <div class="partner-list">
+                        <div class="partner-item">
+                            <div class="partner-item-img">
+                                <img src="img/partner-1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="partner-item">
+                            <div class="partner-item-img">
+                                <img src="img/partner-2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="partner-item">
+                            <div class="partner-item-img">
+                                <img src="img/partner-3.png" alt="">
+                            </div>
+                        </div>
+                        <div class="partner-item">
+                            <div class="partner-item-img">
+                                <img src="img/partner-4.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="partner-overlay"></div>
+                </div>
+            </div>
+        </section>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h1>Freelancing</h1>
+                </div>
+                <div class="footer-adress">
+                    <p>2015 Creative Commons Korea <br> Some Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 <script defer src="main.js"></script>
 </body>
