--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <ul class="navbar-nav">
                         <li class='nav-item'><a href="index.html">Home</a></li>
                         <li class='nav-item'><a href="about.html">About</a></li>
-                        <li class='nav-item'><a href="contact.html">Program</a></li>
-                        <li class='nav-item'><a href="login.html">Join</a></li>
-                        <li class='nav-item'><a href="register.html">Sponsor</a></li>
+                        <li class='nav-item'><a href="#">Program</a></li>
+                        <li class='nav-item'><a href="#">Join</a></li>
+                        <li class='nav-item'><a href="#">Sponsor</a></li>
                     </ul>
                 </div>
                 <div class="menu-btn">
