Add desktop version

--- a/index.html
+++ b/index.html
@@ -215,6 +215,19 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="feature-item">
+                            <div class="feature-item-img">
+                                <img src="img/profile-3.jpg" alt="">
+                            </div>
+                            <div class="feature-item-text">
+                                <h3>John Serubungo</h3>
+                                <span class="role">Director of Art center Nabi</span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Donec euismod, nisl eget consectetur sagittis.
+                                </p>
+                            </div>
+                        </div>
                         <div class="more-feature">
                             <a href="#" class="more-btn">More <i class="fa-solid fa-chevron-down"></i></a>
                         </div>
