--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                     </p>
                     <p class="contact-message">Please contact us per 
                         Email for any further questions about CC Global Summit 2015</p>
-                    <a href="#" class="Email-btn">barakadan421@gmail.com <i class="fa-solid fa-chevron-right"></i></a>
+                    <a href="mailto:barakadan421@gmail.com" class="Email-btn">barakadan421@gmail.com <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
             </div>
         </section>
