Changes about page footer background color

--- a/about.html
+++ b/about.html
@@ -124,39 +124,8 @@
             </div>
         </section>
 
-        <!-- Partner section -->
-        <section class="partner">
-            <div class="container">
-                <div class="partner-content">
-                    <h2 class="section-title partner-title">Partner</h2>
-                    <div class="partner-list">
-                        <div class="partner-item">
-                            <div class="partner-item-img">
-                                <img src="img/partner-1.png" alt="">
-                            </div>
-                        </div>
-                        <div class="partner-item">
-                            <div class="partner-item-img">
-                                <img src="img/partner-2.png" alt="">
-                            </div>
-                        </div>
-                        <div class="partner-item">
-                            <div class="partner-item-img">
-                                <img src="img/partner-3.png" alt="">
-                            </div>
-                        </div>
-                        <div class="partner-item">
-                            <div class="partner-item-img">
-                                <img src="img/partner-4.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="partner-overlay"></div>
-                </div>
-            </div>
-        </section>
     </div>
-    <footer class="footer">
+    <footer class="footer about-footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
