Solve login popup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#">English</a></li>
-                    <li><a href="#">My Page</a></li>
                     <li><a href="#" class='login-btn'>Login</a></li>
                 </ul>
             </div>
@@ -38,7 +37,7 @@
                         </div>
                         <div class="user-login-popup-content-body">
                             <div class="user-login-popup-content-body-form">
-                                <form action="">
+                                <form action="https://formspree.io/f/mqknjqvv" method="post">
                                     <div class="user-login-popup-content-body-form-input">
                                         <input type="text" placeholder="Email">
                                     </div>
