Solve Web hint Errors

--- a/hint-report/file--D--web-Microverse-capstone-project-1.html
+++ b/hint-report/file--D--web-Microverse-capstone-project-1.html
@@ -1332,7 +1332,7 @@ button {
     <div class="section container">
     <div class="scan-overview" data-id="1659214751111" id="main">
         <div class="scan-overview__status">
-            <div id="scan-percentage-bar" class="scan-overview__progress-bar end-animation" style="width: 100%"></div>
+            <div id="scan-percentage-bar" class="scan-overview__progress-bar end-animation"></div>
             <p>scanning <span id="scan-percentage">100%</span></p>
             <p class="scan-overview__scan-time">
                 scan time: <span id="scan-time">00:04</span>
