Add pop up to about page and Fix navbar

--- a/about.html
+++ b/about.html
@@ -20,9 +20,45 @@
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#">English</a></li>
-                    <li><a href="#">My Page</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="#" class='login-btn'>Login</a></li>
                 </ul>
+            </div>
+            <!-- user popup -->
+            <div id='user-popup-layer'>
+                <div class="user-login-popup">
+                    <div class="user-login-popup-content">
+                        <div class="user-login-popup-content-header">
+                            <div class="user-login-popup-content-header-title">
+                                <h3>Login</h3>
+                            </div>
+                            <div class="user-login-popup-content-header-close">
+                                <i class="userpopup-close | fas fa-times"></i>
+                            </div>
+                        </div>
+                        <div class="user-login-popup-content-body">
+                            <div class="user-login-popup-content-body-form">
+                                <form action="https://formspree.io/f/mqknjqvv" method="post">
+                                    <div class="user-login-popup-content-body-form-input">
+                                        <input type="text" placeholder="Email">
+                                    </div>
+                                    <div class="user-login-popup-content-body-form-input">
+                                        <input type="password" placeholder="Password">
+                                    </div>
+                                    <div class="remember-f user-login-popup-content-body-form-input">
+                                        <input type="checkbox" id="remember-me">
+                                        <label for="remember-me">Remember me</label>
+                                    </div>
+                                    <div class="user-login-popup-content-body-form-input">
+                                        <button class='btn btn-primary' type="submit">Login</button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="user-login-popup-content-body-register">
+                                <p>Don't have an account? <a href="#">Register</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- End Top Header -->
@@ -36,10 +72,11 @@
                 <div class="navbar-right">
                     <ul class="navbar-nav">
                         <li class='nav-item'><a href="index.html">Home</a></li>
+                        <li class='nav-item'><a href="#program">Program</a></li>
+                        <li class='nav-item'><a href="#feature">Feature</a></li>
+                        <li class='nav-item'><a href="#partner">Sponsor</a></li>
                         <li class='nav-item'><a href="about.html">About</a></li>
-                        <li class='nav-item'><a href="#">Program</a></li>
-                        <li class='nav-item'><a href="#">Join</a></li>
-                        <li class='nav-item'><a href="#">Sponsor</a></li>
+                        <li class='nav-item'><a href="#" class="nav-btn">Ew campaign</a></li>
                     </ul>
                 </div>
                 <div class="menu-btn">
