--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <div class="navbar-right">
                     <ul class="navbar-nav">
                         <li class='nav-item'><a href="index.html">Home</a></li>
+                        <li class='nav-item'><a href="#program">Program</a></li>
+                        <li class='nav-item'><a href="#feature">Feature</a></li>
+                        <li class='nav-item'><a href="#partner">Sponsor</a></li>
                         <li class='nav-item'><a href="about.html">About</a></li>
-                        <li class='nav-item'><a href="#">Program</a></li>
-                        <li class='nav-item'><a href="#">Join</a></li>
-                        <li class='nav-item'><a href="#">Sponsor</a></li>
                         <li class='nav-item'><a href="#" class="nav-btn">Ew campaign</a></li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
         </section>
 
         <!-- program section -->
-        <section class="program">
+        <section id="program" class="program">
             <div class="program-bg">
                 <div class="container">
                     <div class="program-content">
@@ -183,7 +183,7 @@
         </section>
 
         <!-- Feature section -->
-        <section class="feature">
+        <section id="feature" class="feature">
             <div class="container">
                 <div class="feature-content">
                     <h2 class="section-title">Feature</h2>
@@ -198,7 +198,7 @@
         </section>
 
         <!-- Partner section -->
-        <section class="partner">
+        <section id="partner" class="partner">
             <div class="container">
                 <div class="partner-content">
                     <h2 class="section-title partner-title">Partner</h2>
